RESOLVED FIXED108281
[BlackBerry] Webpage was cut off after rotating to landscape and then rotating back to portrait on specific website
https://bugs.webkit.org/show_bug.cgi?id=108281
Summary [BlackBerry] Webpage was cut off after rotating to landscape and then rotatin...
Xiaobo Wang
Reported 2013-01-29 18:38:16 PST
PR 284985 Steps to Reproduce: 1)Launch browser 2)go to http://luotuo.tmall.com/ 3)Wait until the full page is loaded, then rotate device to landscape mode 4) Rotate it back to portrait mode ... 5) Expected Results: There is no rendering issue Actual Results: After step 4, the right side of the webpage was cut off.
Attachments
patch (2.31 KB, patch)
2013-01-29 18:56 PST, Xiaobo Wang
no flags
Xiaobo Wang
Comment 1 2013-01-29 18:39:55 PST
When rotating back to portrait, WebPagePrivate::overflowExceedsContentsSize() was called. It will call setViewMode(), in which we will get fixedLayoutSize() and compare with the fixedLayoutSize in the FrameView. But WebPagePrivate::fixedLaoutSize() returned wrong size because the width was reset to 0 and then fallback to defaultLayoutSize.width(). if (m_pendingOrientation != -1 && !m_nestedLayoutFinishedCount) width = 0; Can be fixed by adding a check of m_overflowExceedsContentsSize, only reset width if m_overflowExceedsContentsSize is not true.
Xiaobo Wang
Comment 2 2013-01-29 18:56:31 PST
Rob Buis
Comment 3 2013-01-30 04:32:01 PST
Comment on attachment 185378 [details] patch LGTM.
WebKit Review Bot
Comment 4 2013-01-30 09:14:01 PST
Comment on attachment 185378 [details] patch Clearing flags on attachment: 185378 Committed r141276: <http://trac.webkit.org/changeset/141276>
WebKit Review Bot
Comment 5 2013-01-30 09:14:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.