[BlackBerry] Webpage was cut off after rotating to landscape and then rotating back to portrait on specific website https://bugs.webkit.org/show_bug.cgi?id=108281 PR 284985

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2013-01-30
Reviewed by Rob Buis.
Internally reviewed by Jacky Jiang.

Return correct fixedLayoutSize when overflow exceeds contents size.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::fixedLayoutSize):

Canonical link: https://commits.webkit.org/126556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141276 268f45cc-cd09-0410-ab3c-d52691b4dbfc